# stanley-reisner-attention

./: LICENSE  README.md  pyproject.toml  research_note.md  research_note_0.md  test_sr_core.py
notebooks/: stanley_reisner_attention.ipynb  stanley_reisner_attention_analysis.ipynb
scripts/: compare_pushforward.py  run_analysis.py
sr_attention/: __init__.py  complex_builder.py  config.py  extraction.py  persistence.py  run_analysis.py  sr_core.py
tests/: test_sr_core.py
