[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "sr-attention"
version     = "0.1.0"
description = "Stanley–Reisner Ideals for Transformer Attention Analysis"
readme      = "README.md"
requires-python = ">=3.10"
license     = { text = "MIT" }

keywords = [
    "mechanistic-interpretability",
    "transformers",
    "algebraic-topology",
    "stanley-reisner",
    "attention",
    "simplicial-complex",
    "topological-data-analysis",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24",
    "gudhi>=3.8",
    "transformer-lens>=3.0",
    "torch>=2.1",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "black",
    "ruff",
    "ipykernel",
    "jupyter",
]

[project.scripts]
sr-analyze = "scripts.run_analysis:main"

[project.urls]
Repository = "https://github.com/YOUR_USERNAME/sr-attention"

[tool.setuptools.packages.find]
where = ["."]
include = ["sr_attention*"]

[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
